comparator feature implement new api for left header strip add